# capacitor

./: CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_reports.yml  config.yml  feature_requests.yml  feedback.yml  questions.yml  suggestions.yml
.github/workflows/: format.yml  lint.yml  tests.yml
examples/bot_basic/: README.md  main.py  requirements.txt
examples/bot_basic/cogs/: cog_example.py  other_cog_example.py
examples/bot_subclassed/: .env.example  README.md  bot.py  main.py
examples/bot_subclassed/cogs/: cog_example.py  other_cog_example.py
fluxer/: __init__.py  client.py  gateway.py  http.py  utils.py
fluxer/models/: channel.py  embed.py  guild.py  message.py  reaction.py  user.py
